Just another update

--- a/Python podstawowy/10. Praca z plikami.md
+++ b/Python podstawowy/10. Praca z plikami.md
@@ -115,6 +115,63 @@ Oprócz powyżej opisanych trybów otwierania pliku występują również inne. 
 ---
 &nbsp;
 ### 10.3 Pliki json
+Pliki tekstowe nie są najlepszym sposobem na przechowywanie danych. Nie da się zapisać w nich danych o złożonej strukturze. Jest to wyłącznie ciąg tekstu, odpowiednik zmiennej typu string. Jeśli w danych jest jakaś hierarchiczna struktura - tak jak w listach czy słownikach - pliki tekstowe jej nie oddadzą. Dlatego właśnie zwykle lepszym wyborem jest zapis danych w plikach .json.
+
+JSON to skrót od *JavaScript Object Notation* i oznacza format danych, który odpowiada zagnieżdżonej strukturze pythonowych list i słowników. Jeżeli posiadamy dane w takiej formie możemy je łatwo zapisać do plików z rozszerzeniem .json. Potrzebujemy jedynie zaimportować odpowiednią bibliotekę.
+
+#### 10.3.1 Operacje zapisu
+Aby zapisać listę albo słownik do pliku .json należy otworzyć go w trybie zapisu a następnie wywołać funkcję `dump` z biblioteki `json`:
+
+```python
+import json
+
+
+zombie_characters = [
+					 {"x": 0, "y": 1.2, "velocity": 5, "experience": 1, "power": 6},
+                     {"x": 5.23, "y": -2.2, "velocity": 8, "experience": 3, "power": 8}
+                     ]
+
+
+with open("files/zombie_characters.json", "w") as f:
+    json.dump(zombie_characters, f)
+```
+
+W efekcie powstanie plik `zombie_characters.json` w folderze `files`. Jego treścią bedzie struktura odpowiadająca zmiennej `zombie_characters`. Jeżeli chcemy, żeby tekst zachował wcięcia przy każdym poziomie zagnieżdżenia, możemy przekazać argument `indent`:
+```python
+with open("files/zombie_characters.json", "w") as f:
+    json.dump(zombie_characters, f, indent=4)
+```
+
+Poza tym, jeżeli chcemy zamienić dowolnie zagnieżdżoną strukturę list i słowników na zmienną typu `str` wystarczy wywołać funkcję `dumps`, która zwróci takiego właśnie stringa:
+```python
+zombie_characters_str = json.dumps(zombie_characters)
+```
+
+
+#### 10.3.2 Odczyt z pliku
+Aby z powrotem wczytać obiekt z pliku .json należy użyć funkcji `load` z tej samej biblioteki `json`:
+
+```python
+with open("files/zombie_characters.json", "r") as f:
+    loaded_json = json.load(f)
+```
+
+W efekcie powstanie zmienna zawierająca wyjściowe dane.
+
+Możemy również zamienić stringa odzwierciedlającego strukturę typu JSON na rzeczywisty obiekt (listę/słownik):
+
+```python
+loaded_json = json.loads(zombie_characters_str)
+    
+loaded_json
+```
+
+**Pliki json - podsumowanie:**
+- Aby zapisać strukturę list i słowników do pliku .json używamy funkcji `dump` z biblioteki `json`
+- Aby zamienić taką strukturę na stringa używamy funkcji `dumps`
+- Możemy również wczytać taki plik i stworzyć w ten sposób zmienną typu `list` czy `dict` za pomocą funkcji `load`
+- W celu zamiany stringa odpowiadającego strukturze JSON na listę lub słownik używamy funkcji `loads`
+
 
 ---
 ---
