--- a/Python podstawowy/6. Funkcje.md
+++ b/Python podstawowy/6. Funkcje.md
@@ -98,19 +98,19 @@ shoot_n_zombies(n=2)
 ```
 
 ---
-Rozróżniamy dwa rodzaje argumentów ze względu na sposób przekazywania - pozycyjne (*positional arguments*) oraz nazwane (*keyword arguments*). Argumenty pozycyjne to te, które przekazujemy zachowując ich kolejność a nazwane to takie, przy których używamy nazwy parametru podczas przekazywania. Oba posoby przekazywania argumentów są dozwolone.
+Rozróżniamy dwa rodzaje argumentów ze względu na sposób przekazywania - pozycyjne (*positional arguments*) oraz nazwane (*keyword arguments*). Argumenty pozycyjne to te, które przekazujemy zachowując ich kolejność a nazwane to takie, przy których używamy nazwy parametru podczas przekazywania. Wówczas kolejność jest dowolna. Oba sposoby przekazywania argumentów są dozwolone.
 
-```python
-def multi_parameter_function(a, b, c):
-    product = a * b * c
-    print(product)
-
-
-multi_parameter_function(1, 2, 3)
-# 6
-
-multi_parameter_function(a=1, b=2, c=3)
-# 6
+```python  
+def calculate_something(a, b, c):  
+	result = a - b / c  
+	print(result)  
+  
+  
+calculate_something(5, 4, 2)  
+# 3.0  
+  
+calculate_something(a=5, c=2, b=4)  
+# 3.0
 ```
 
 ---
@@ -171,6 +171,9 @@ solve_quadratic_equation(1, 1, -2)
 
 
 Poniżej ten sam przykład, ale z wyodrębnieniem zadania liczenia delty do oddzielnej funkcji. Dobrą praktyką jest stosowanie się do *zasady pojedynczej odpowiedzialności.* Oznacza ona, że każda funkcja powinna wykonywać tylko jedno zadanie. Poszczególne mniejsze zadania wyodrębniamy do osobnych funkcji. 
+
+Oprócz tego przechwytujemy tutaj zwracane wartości do dwóch zmiennych.
+
 ```python
 def calculate_delta(a, b, c):
     return b**2 - 4*a*c
@@ -204,7 +207,7 @@ print(x2)
 ---
 &nbsp;
 ### 6.4 Parametry z wartością domyślną
-Niektóre parametry mogą mieć wartość domyślną. Oznacza to, że jeśli nie przekażemy niczego w postaci argumentu, zostanie użyta domyślna wartość. Definiujemy ją w następujący sposób:
+Niektóre parametry mogą mieć wartość domyślną. Oznacza to, że jeśli nie przekażemy niczego jako argument, zostanie użyta domyślna wartość. Definiujemy to w następujący sposób:
 ```python
 def calculate_distance_to_point(coordinates, reference=(0, 0)):
     x_a, y_a = coordinates
@@ -349,7 +352,7 @@ calculate_human_score(*list_of_humans[0])
 Efekt jest taki sam jak gdyby tuplę `list_of_humans[0]` podzielić na poszczególne elementy i przekazać do funkcji jako osobne argumenty.
 
 ---
-Podobny efekt można uzyskać odpakowując słownik. Klucze słownika muszą odpowiadać nazwom parametrów :
+Podobny efekt można uzyskać odpakowując słownik. Klucze słownika muszą odpowiadać nazwom parametrów:
 ```python
 calculate_human_score(**{"velocity": 2, "experience": 4, "power": 3})
 
@@ -366,7 +369,7 @@ calculate_human_score(**{"velocity": 2, "experience": 4, "power": 3})
 ---
 &nbsp;
 ### 6.8 args, kwargs
-Może się zdarzyć że chcemy przekazać do funkcji pewną liczbę argumentów (pozycyjnych lub nazwanych) ale określamy ile dokładnie ich będzie. W takim wypadku jest możliwe przekazać ich dowolnie dużo i trafią one do funkcji jako tupla (w przypadku argumentów pozycyjnych) lub jako słownik (w przypadku argumentów nazwanych). Definicja takiej funkcji wygląda następująco dla argumentów pozycyjnych:
+Może się zdarzyć że chcemy przekazać do funkcji pewną liczbę argumentów (pozycyjnych lub nazwanych) ale nie określamy ile dokładnie ich będzie. W takim wypadku jest możliwe przekazać ich dowolnie dużo i trafią one do funkcji jako tupla (w przypadku argumentów pozycyjnych) lub jako słownik (w przypadku argumentów nazwanych). Definicja takiej funkcji wygląda następująco dla argumentów pozycyjnych:
 
 ```python
 def calculate_average(*args):
@@ -378,7 +381,8 @@ oraz dla argumentów nazwanych:
 ```python
 def create_zombie_dict(**kwargs):
     # zmienna kwargs jest słownikiem
-    return {"x": kwargs["x"], "y": kwargs["y"], "velocity": kwargs["velocity"]}
+    return {"x": kwargs["x"], "y": kwargs["y"],
+     "velocity": kwargs["velocity"], "n_infected": 0}
 ```
 
 Nazwy `args` i `kwargs` wynikają z konwencji. Składnia języka nie wymusza dokładnie takich nazw, ale warto jest się ich trzymać. To co jest wymagane przez składnię to operatory * oraz ** w definicji funkcji.
