--- a/Python podstawowy/8. Moduły.md
+++ b/Python podstawowy/8. Moduły.md
@@ -102,6 +102,8 @@ from folder.functions import example_funcion
 another_function()
 example_funcion()
 ```
+
+W podobny sposób importujemy inne obiekty, np. listy czy słowniki.
 ---
 ---
 ---
