Just another update

--- a/Python podstawowy/1. Wprowadzenie.md
+++ b/Python podstawowy/1. Wprowadzenie.md
@@ -2,11 +2,11 @@
 Python jest *wysokopoziomowym*, *interpretowanym*, *dynamicznie typowanym*, *obiektowym* językiem programowania *ogólnego przeznaczenia*.
 
 #### 1.1.1 Wysokopoziomowy
-Programując w Pythonie nie musisz dokładnie rozumieć jak działa komputer, w jaki sposób wykonywanie programu przekłada się na pracę procesora czy pamięci operacyjnej. Python operuje na wyższym poziomie abstrakcji dzięki czemu kodowanie w nim przypomina komunikację w języku angielskim.
+Programując w Pythonie nie musisz dokładnie rozumieć jak działa komputer, w jaki sposób wykonywanie programu przekłada się na pracę procesora czy pamięci operacyjnej. Python operuje na wyższym poziomie abstrakcji, dzięki czemu kodowanie w nim przypomina komunikację w języku angielskim.
 
 
 #### 1.1.2 Interpretowany
-Program przed uruchomieniem nie musi zostać skompilowany czyli zamieniony na kod maszynowy. Interpreter Pythona operuje wprost na kodzie źródłowym. Dzięki temu szybciej możemy uruchomić nasz kod, ale aby to zrobić potrzebujemy mieć dostęp do interpretera.
+Program przed uruchomieniem nie musi zostać skompilowany, czyli zamieniony na kod maszynowy. Interpreter Pythona operuje wprost na kodzie źródłowym. Dzięki temu szybciej możemy uruchomić nasz kod, ale aby to zrobić potrzebujemy mieć dostęp do interpretera.
 
 
 
