--- a/Python podstawowy/2. Podstawy.md
+++ b/Python podstawowy/2. Podstawy.md
@@ -32,7 +32,7 @@ no_value = None
 ```
 
 ---
-W Pythonie nie istnieją stałe, czyli obiekty podobne do zmiennych, ale nie mogące zmieniać swojej wartości w trakcie działania programu. Jeśli jednak chcemy stworzyć zmienną, której wartość nie powinna być nadpisywana to zgodnie z konwencją zapisujemy ją wielkimi literami:
+W Pythonie nie istnieją stałe, czyli obiekty podobne do zmiennych, ale nie mogące zmieniać swojej wartości w trakcie działania programu. Jeśli jednak chcemy stworzyć zmienną, której wartość nie powinna być nadpisywana, to zgodnie z konwencją zapisujemy ją wielkimi literami:
 ```python
 PI = 3.1415926
 ```
@@ -52,7 +52,7 @@ PI = 3.1415926
 ### 2.2 Komentarze
 Czasami chcemy w kodzie zawrzeć jakąś notatkę, która nie jest poprawnym składniowo kodem Pythona - jest po prostu informacją dla osoby, która będzie w przyszłości czytać nasz kod. Takie notatki nazywają się komentarzami a ich zawartość nie jest czytana przez interpreter Pythona.
 
-Aby napisać komentarz należy użyć znaku # - to co znajdzie się na prawo od niego będzie traktowane jako komentarz.
+Aby napisać komentarz, należy użyć znaku # - to, co znajdzie się na prawo od niego, będzie traktowane jako komentarz.
 
 ```python
 initial_x_coordinate = -4.12  # początkowe położenia wzdłuż osi x
@@ -61,13 +61,13 @@ initial_experience = 0  # początkowe doświadczenie
 # TODO zainicjować kolejne parametry początkowe
 ```
 
-Czasami dodanie komentarza jest dobrym sposobem na to aby dany fragment kodu był bardziej zrozumiały dla osoby, która do niego wraca, ale ogólna zasada pisania dobrego kodu jest taka, że kod powinien być "samokomentujący się", to znaczy że on sam tłumaczy co właśnie dzieje się w programie.
+Czasami dodanie komentarza jest dobrym sposobem na to, aby dany fragment kodu był bardziej zrozumiały dla osoby, która do niego wraca, ale ogólna zasada pisania dobrego kodu jest taka, że kod powinien być "samokomentujący się", to znaczy że on sam tłumaczy co właśnie dzieje się w programie.
 
-Innym zastosowaniem komentarzy, którego również nie powinniśmy nadużywać jest komentowanie fragmentów kodu, którego tymczasowo nie planujemy używać ale nie chcemy go też trwale usuwać. Jest to przydatne na etapie testów i eksperymentów, ale na dłuższą metę kod nie powinien pozostawać zakomentowany.
+Innym zastosowaniem komentarzy, którego również nie powinniśmy nadużywać jest komentowanie fragmentów kodu, którego tymczasowo nie planujemy używać, ale nie chcemy go też trwale usuwać. Jest to przydatne na etapie testów i eksperymentów, ale na dłuższą metę kod nie powinien pozostawać zakomentowany.
 
 ---
 
-W wielu językach programowania istnieją tzw. komentarze blokowe, czyli takie które obejmują więcej niż jedną linię kodu. W Pythonie nie istnieją takie komentarze, ale ich rolę mogą spełniać wielolinijkowe stringi nie przypisane do zmiennej. Aby utworzyć wielolinijkowego stringa używamy potrójnych cudzysłowów (lub apostrofów):
+W wielu językach programowania istnieją tzw. komentarze blokowe, czyli takie, które obejmują więcej niż jedną linię kodu. W Pythonie nie istnieją takie komentarze, ale ich rolę mogą spełniać wielolinijkowe stringi nieprzypisane do zmiennej. Aby utworzyć wielolinijkowego stringa, używamy potrójnych cudzysłowów (lub apostrofów):
 
 ```python
 """
@@ -77,7 +77,7 @@ linii
 """
 ```
 
-Umieszczenie takiego stringa w kodzie działa podobnie jak komentarz blokowy, z tą różnicą że interpreter traktuje go jak pełnoprawny obiekt. Po prostu nie jest on przypisywany do żadnej zmiennej więc nie wpływa na działanie programu.
+Umieszczenie takiego stringa w kodzie działa podobnie jak komentarz blokowy, z tą różnicą, że interpreter traktuje go jak pełnoprawny obiekt. Po prostu nie jest on przypisywany do żadnej zmiennej, więc nie wpływa na działanie programu.
 
 ---
 **Komentarze - podsumowanie:**
@@ -89,13 +89,13 @@ Umieszczenie takiego stringa w kodzie działa podobnie jak komentarz blokowy, z 
 ---
 &nbsp;
 ### 2.3 Typy
-Każdy obiekt w Pythonie jest obiektem określonego typu. Typ to cecha, która determinuje jakie operacje możemy wykonać na obiekcie i wiąże się z tym jakiego rodzaju dane on przechowuje. KIlka najczęściej spotykanych typów to:
-- *string* - czyli łańcuch znaków a więc tekst
+Każdy obiekt w Pythonie jest obiektem określonego typu. Typ to cecha, która determinuje jakie operacje możemy wykonać na obiekcie i wiąże się z tym jakiego rodzaju dane on przechowuje. Kilka najczęściej spotykanych typów to:
+- *string* - czyli łańcuch znaków, a więc tekst
 - *int* - czyli liczba całkowita (*integer*)
-- *float* - liczba zmiennoprzecinkowa (*floating point*) czyli taka, która posiada rozwinięcie dziesiętne
+- *float* - liczba zmiennoprzecinkowa (*floating point*), czyli taka, która posiada rozwinięcie dziesiętne
 - *bool* - wartość logiczna (prawda lub fałsz) od angielskiego *boolean*
 
-Aby sprawdzić jakiego typu jest dany obiekt należy wywołać funkcję `type` przekazując do niej ten obiekt jako argument.
+Aby sprawdzić jakiego typu jest dany obiekt należy wywołać funkcję `type`, przekazując do niej ten obiekt jako argument.
 
 ```python
 type(character_class)
@@ -128,7 +128,7 @@ type(str)
 ```
 
 ---
-Python pozwala również zamienić obiekt na podobny obiekt ale innego typu. Nazywamy to rzutowaniem typu. Nie zawsze jest to możliwe, ale w pewnych przypadkach owszem. 
+Python pozwala również zamienić obiekt na podobny obiekt, ale innego typu. Nazywamy to rzutowaniem typu. Nie zawsze jest to możliwe, ale w pewnych przypadkach owszem. 
 
 Przykładowo:
 ```python
@@ -143,14 +143,14 @@ int(-12.58)
 
 # -12
 ```
-Rzutowanie typu w tym przypadku polega na ucięciu cyfr po przecinku a nie zaokrągleniu do najbliższej liczby całkowitej.
+Rzutowanie typu w tym przypadku polega na ucięciu cyfr po przecinku, a nie zaokrągleniu do najbliższej liczby całkowitej.
 
 ```python
 float(True)
 
 # 1.0
 ```
-Tutaj otrzymujemy 1.0 ponieważ wartości logicznej *True* odpowiada liczba 1, ale w tym przypadku zamieniamy ją na floata.
+Tutaj otrzymujemy 1.0, ponieważ wartości logicznej *True* odpowiada liczba 1, ale w tym przypadku zamieniamy ją na floata.
 
 Próba rzutowania niektórych typów zakończy się błędem programu. Nie możemy na przykład zrzutować stringa na inta.
 
@@ -306,7 +306,7 @@ round(3.1415926, 2)
 ---
 &nbsp;
 ### 2.5 Operacje arytmetyczne
-Operatory arytmetyczne - takie jak np. +, -, *, / itp. mają w Pythonie zastosowanie zgodne z tym jak działają one w kalkulatorach. Jeżeli chcemy wykonać na dwóch liczbach operację arytmetyczną możemy zrobić to w bardzo intuicyjny sposób, np.:
+Operatory arytmetyczne - takie jak np. +, -, *, / itp. mają w Pythonie zastosowanie zgodne z tym jak działają one w kalkulatorach. Jeżeli chcemy wykonać na dwóch liczbach operację arytmetyczną, możemy zrobić to w bardzo intuicyjny sposób, np.:
 
 ```python
 2 + 2
@@ -376,7 +376,7 @@ print(new_x_position)
 ```
 
 ---
-Kiedy chcemy zmienić (nadpisać) wartość zmiennej możemy zrobić to na przykład w taki sposób:
+Kiedy chcemy zmienić (nadpisać) wartość zmiennej, możemy zrobić to na przykład w taki sposób:
 
 ```python
 time_counter = 0
@@ -478,7 +478,7 @@ Po wywołaniu wszystkich tych funkcji wartość zmiennej `experience_rule` nie u
 Ze stringów możemy wyciągać poszczególne znaki lub ich sekwencje na podstawie ich pozycji, zwanych także **indeksami**.
 
 ---
->Pozycje (indeksy) numerujemy od 0, to znaczy że pierwszy znak stringa ma indeks 0. Stąd możemy go również nazywać "zerowym" znakiem, kolejny "pierwszym" itd. Błędna indeksacja stringów oraz innych sekwencji jest częstym błędem początkujących.
+>Pozycje (indeksy) numerujemy od 0, to znaczy, że pierwszy znak stringa ma indeks 0. Stąd możemy go również nazywać "zerowym" znakiem, kolejny "pierwszym" itd. Błędna indeksacja stringów oraz innych sekwencji jest częstym błędem początkujących.
 ---
 
 Indeksy które chcemy wyciągnąć przekazujemy w **nawiasach kwadratowych**.  Dla przypomnienia - string na którym pracujemy to:
@@ -505,7 +505,7 @@ experience_rule[11]
 experience_rule[12]
 ```
 ' '
-Aby wyciągnąć sekwencję znaków od jednego indeksu do drugiego używamy dwukropka, który wskazuje na przedział. Uwaga - pozycja podana **po** dwukropku stanowi przedział otwarty, to znaczy że nie pojawia się w wyniku!
+Aby wyciągnąć sekwencję znaków od jednego indeksu do drugiego używamy dwukropka, który oznacza przedział. Uwaga - pozycja podana **po** dwukropku stanowi przedział otwarty, to znaczy, że nie pojawia się w wyniku!
 
 ```python
 experience_rule[6:12]
@@ -539,7 +539,7 @@ print(f"W każdej jednostce czasu pokonuję {my_velocity} jednostki odległości
 
 # 'W każdej jednostce czasu pokonuję 4 jednostki odległości'
 ```
-`f` przed otwarciem cudzysłowa (pojedynczego lub podwójnego) oznacza że tworzymy f-stringa, natomiast w nawiasach klamrowych wewnątrz umieszczamy zmienną, która ma znaleźć się wewnątrz stringa.
+`f` przed otwarciem cudzysłowa (pojedynczego lub podwójnego) oznacza, że tworzymy f-stringa, natomiast w nawiasach klamrowych wewnątrz umieszczamy zmienną, która ma znaleźć się wewnątrz stringa.
 
 Istnieje również inny sposób formatowania stringów, charakterystyczny dla starszych wersji Pythona:
 
