--- a/Python podstawowy/3. Struktury danych.md
+++ b/Python podstawowy/3. Struktury danych.md
@@ -1,5 +1,5 @@
 ### 3.1 list
-Struktury danych - zwane również kolekcjami - to obiekty, które są w stanie przechowywać więcej niż jedną wartość w zorganizowany sposób. Jedną z najbardziej powszechnych struktur danych w Pythonie jest lista, czyli odpowiednik arraya z takich języków jak JavaScript czy C++. 
+Struktury danych — zwane również kolekcjami — to obiekty, które są w stanie przechowywać więcej niż jedną wartość w zorganizowany sposób. Jedną z najbardziej powszechnych struktur danych w Pythonie jest lista, czyli odpowiednik arraya z takich języków jak JavaScript czy C++. 
 
 Lista to szereg kolejnych wartości, które zwykle są ze sobą w jakiś sposób powiązane w związku z czym wygodniej jest trzymać je w jednej zmiennej. Na przykład poniższy zapis:
 ```python
@@ -23,7 +23,7 @@ human_x_coordinates = [14.34, -3.89, -65.23, 0.84]
 human_y_coordinates = [3.52, -42.91, 2.75, 22.48]
 ```
 
-Teraz mamy tylko dwie zmienne - jedna przechowuje współrzędne x a druga y. Kiedy pojawi się nowa postać, której współrzędne będziemy chcieli zapisać wystarczy rozbudować już istniejące listy.
+Teraz mamy tylko dwie zmienne — jedna przechowuje współrzędne x a druga y. Kiedy pojawi się nowa postać, której współrzędne będziemy chcieli zapisać wystarczy rozbudować już istniejące listy.
 
 ---
 Jeśli chcemy się przekonać jakiego typu jest utworzony przed chwilą obiekt (czyli lista) wystarczy użyć funkcji `type`:
@@ -32,7 +32,7 @@ type(human_x_coordinates)
 ```
 Okaże się, że jest to `list`. 
 
-Aby dostać się do poszczególnych elementów listy używamy takiej samej notacji jak do [[2. Podstawy#2.5 Operacje na stringach|wyciągania części stringów]] poszczególnych znaków lub ich przedziałów. Należy pamiętać, że indeks 0 odnosi się do tego elementu, który potocznie nazywamy "pierwszym":
+Aby dostać się do poszczególnych elementów listy, używamy takiej samej notacji jak do [[2. Podstawy#2.5 Operacje na stringach|wyciągania części stringów]] poszczególnych znaków lub ich przedziałów. Należy pamiętać, że indeks 0 odnosi się do tego elementu, który potocznie nazywamy "pierwszym":
 ```python
 human_x_coordinates[0]
 
@@ -62,7 +62,7 @@ human_x_coordinates[1:3] = [20, 30]
 ```
 
 
-2. Listy mogą składać się z elementów różnych typów, np:
+2. Listy mogą składać się z elementów różnych typów, np.:
 ```python
 mixed_list = ["a", 1, 2.34, True, None]
 ```
@@ -97,7 +97,7 @@ Podobną strukturą danych do listy jest tupla (ang. *tuple*). Ona również poz
 x_y_coordinates = (14.34, 3.52)
 ```
 
-Istnieją również inne różnice między tymi dwiema strukturami. Podstawowa różnica jest taka, że tupla jest typem niemutowalnym, co oznacza że raz utworzonej tupli nie możemy zmodyfikować. Ma to swoje konsekwencje związane z ilością pamięci zajmowanej przez obiekt oraz czasem w jakim jest on tworzony. Więcej na ten temat znajduje się w [[3. Struktury danych#3.9 Mutowalność, hashowalność i kopiowanie obiektów|osobnym temacie]]. 
+Istnieją również inne różnice między tymi dwiema strukturami. Podstawowa różnica jest taka, że tupla jest typem niemutowalnym, co oznacza, że raz utworzonej tupli nie możemy zmodyfikować. Ma to swoje konsekwencje związane z ilością pamięci zajmowanej przez obiekt oraz czasem w jakim jest on tworzony. Więcej na ten temat znajduje się w [[3. Struktury danych#3.9 Mutowalność, hashowalność i kopiowanie obiektów|osobnym temacie]]. 
 
 Pomimo tego, że tuple zwykle zapisujemy w nawiasach okrągłych, to są one opcjonalne. **Kluczowy dla tupli jest przecinek** a nie nawiasy. Oba poniższe zapisy są równoważne:
 ```python
@@ -145,7 +145,7 @@ empty_tuple = tuple()
 ---
 &nbsp;
 ### 3.3 dict
-Kolejną strukturą danych, którą często wykorzystujemy w Pythonie do organizacji danych jest słownik, zwany również dictem (ang. *dictionary*). Słowników używamy tam gdzie istnieją pary klucz-wartość takie że pod każdym (unikalnym w ramach dicta) kluczem znajduje się jakaś wartość. 
+Kolejną strukturą danych, którą często wykorzystujemy w Pythonie do organizacji danych jest słownik, zwany również dictem (ang. *dictionary*). Słowników używamy tam, gdzie istnieją pary klucz-wartość takie że pod każdym (unikalnym w ramach dicta) kluczem znajduje się jakaś wartość. 
 
 Przykładem może być struktura, w której przechowujemy informacje na temat symulowanych postaci:
 ```python
@@ -155,15 +155,15 @@ zombie_character = {"class": "Zombie",
                     "power": 10, "is alive": True, "killed at": None}
 ```
 
-Składnia dicta jest następująca - otwieramy oraz zamykamy go nawiasami klamrowymi wewnątrz których znajdują się oddzielone przecinkiem pary klucz-wartość, takie że najpierw podajemy klucz a po dwukropku wartość jaka się pod nim znajduje.
+Składnia dicta jest następująca — otwieramy oraz zamykamy go nawiasami klamrowymi, wewnątrz których znajdują się oddzielone przecinkiem pary klucz-wartość, takie że najpierw podajemy klucz a po dwukropku wartość, jaka się pod nim znajduje.
 
-Aby wyciągnąć wartość która przechowywana jest pod danym kluczem używamy - podobnie jak przy listach oraz tuplach - nawiasów kwadratowych. Jednak zamiast podawania indeksu (pozycji) elementu, który nas interesuje używamy odpowiedniego klucza.
-Przykładowo aby wyciągnąć wartość pod kluczem "velocity" piszemy:
+Aby wyciągnąć wartość, która przechowywana jest pod danym kluczem używamy — podobnie jak przy listach oraz tuplach — nawiasów kwadratowych. Jednak zamiast podawania indeksu (pozycji) elementu, który nas interesuje używamy odpowiedniego klucza.
+Przykładowo, aby wyciągnąć wartość pod kluczem "velocity" piszemy:
 ```python
 zombie_character["velocity"]
 ```
 
-Wartościami dicta mogą być dowolne obiekty. Kluczem może być jedynie obiekt, który jest hashowalny. Więcej na temat hashowalności znajdziesz [[3. Struktury danych#3.9 Mutowalność, hashowalność i kopiowanie obiektów|tutaj]]. Poniżej przykład gdzie kluczami dicta są inty a wartościami tuple:
+Wartościami dicta mogą być dowolne obiekty. Kluczem może być jedynie obiekt, który jest hashowalny. Więcej na temat hashowalności znajdziesz [[3. Struktury danych#3.9 Mutowalność, hashowalność i kopiowanie obiektów|tutaj]]. Poniżej przykład, w którym kluczami dicta są inty a wartościami tuple:
 ```python
 position_in_time = {
     1: (4, 5),
@@ -179,7 +179,7 @@ position_in_time[2]
 ```
 
 ---
-Aby wydobyć ze słownika jego klucze używamy metody `.keys()`:
+Aby wydobyć ze słownika jego klucze, używamy metody `.keys()`:
 ```python
 zombie_character.keys()
 ```
@@ -596,7 +596,7 @@ Podobnie jak ze stringa możemy wyciągać pojedyncze znaki lub ich sekwencje, t
 simple_list = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 ```
 
-Aby wyciągnąć pojedynczy element z listy przekazujemy jego indeks do nawiasów kwadratowych. Numerację zaczynamy od 0.
+Aby wyciągnąć pojedynczy element z listy, przekazujemy jego indeks do nawiasów kwadratowych. Numerację zaczynamy od 0.
 ```python
 simple_list[2]
 
@@ -805,7 +805,7 @@ simulation_config["humans_start_positions"][-1][0]
 ---
 &nbsp;
 ### 3.8 Wbudowane generatory cz. 1
-Generator to obiekt, który zwraca sekwencję wartości, przy czym nie trafiają one jednocześnie do pamięci. Są generowane po kolei a następnie zapominane. Mechanizm ten nazywa się *lazy evalution*. 
+Generator to obiekt, który zwraca sekwencję wartości, przy czym nie trafiają one jednocześnie do pamięci. Są generowane po kolei, a następnie zapominane. Mechanizm ten nazywa się *lazy evalution*. 
 
 Możemy tworzyć własne generatory, jednak istnieje szereg wbudowanych generatorów, których możemy używać bez samodzielnego definiowania ich. Są one przydatne m.in. przy pracy ze strukturami danych. Należą do nich m.in. `zip` oraz `enumerate`.
 
@@ -849,7 +849,7 @@ list(enumerate(x_coordinates))
 # [(0, 2), (1, 5), (2, 3)]
 ```
 
-Otrzymujemy listę tupli - par wartości. Na każdą parę składa się indeks danego elementu wyjściowej listy oraz sam ten element.
+Otrzymujemy listę tupli — par wartości. Na każdą parę składa się indeks danego elementu wyjściowej listy oraz sam ten element.
 
 Możemy również zacząć sekwencję indeksów od innej wartości niż domyślne 0:
 ```python
