--- a/Python podstawowy/4. Instrukcje warunkowe.md
+++ b/Python podstawowy/4. Instrukcje warunkowe.md
@@ -1,7 +1,7 @@
 ### 4.1 Operatory porównania
-W celu sprawdzenia równości lub nierówności dwóch obiektów - zazwyczaj typu numerycznego - używamy operatorów porównania. Zwracają one wartość logiczną *True* / *False* zależną od tego czy warunek został spełniony.
+W celu sprawdzenia równości lub nierówności dwóch obiektów — zazwyczaj typu numerycznego — używamy operatorów porównania. Zwracają one wartość logiczną *True* / *False* zależną od tego czy warunek został spełniony.
 
-Ich znaczenie jest intuicyjne. Należy pamiętać, że do sprawdzenia równości dwóch obiektów używamy **podwójnego** znaku równości *==* oraz że operator sprawdzający **brak równości** to *!=*. Zapisujemy je łącznie - bez spacji.
+Ich znaczenie jest intuicyjne. Należy pamiętać, że do sprawdzenia równości dwóch obiektów używamy **podwójnego** znaku równości *==* oraz że operator sprawdzający **brak równości** to *!=*. Zapisujemy je łącznie — bez spacji.
 
 ```python
 3 > 2    # True
@@ -12,7 +12,13 @@ Ich znaczenie jest intuicyjne. Należy pamiętać, że do sprawdzenia równości
 -2 !＝ 0  # True
 ```
 
-Istnieją również operatory: `in` - który sprawdza czy dany element występuje w sekwencji, `not` - który powoduje zaprzeczenie, `is` - który sprawdza czy dwie zmienne wskazują na ten sam obiekt. Operator `is` jest także często wykorzystywany do sprawdzenia czy dany obiekt to *None*.
+Istnieją również operatory: 
+
+`in` — sprawdza, czy dany element występuje w sekwencji
+`not` — powoduje zaprzeczenie
+`is` — sprawdza, czy dwie zmienne wskazują na ten sam obiekt
+
+Operator `is` jest często wykorzystywany do sprawdzenia czy dany obiekt to *None*.
 
 ```python
 3 in [2, 3, 4, 5]       # True
@@ -35,55 +41,57 @@ variable is not None    # False
 ---
 &nbsp;
 ### 4.2 Spójniki logiczne
-	Spójniki logiczne służą do łączenia dwóch lub więcej warunków logicznych. Wyróżniamy dwa podstawowe spójniki: *and* oraz *or*. *and* oznacza że dla dwóch warunków logicznych oba muszą być prawdziwe żeby całość uznać za prawdę natomiast *or* oznacza że przynajmniej jeden musi być spełniony.
-	
-	```python
+Spójniki logiczne służą do łączenia dwóch lub więcej warunków logicznych. Wyróżniamy dwa podstawowe spójniki: *and* oraz *or*. *and* oznacza, że dla dwóch warunków logicznych oba muszą być prawdziwe, żeby całość uznać za prawdę, natomiast *or* oznacza że przynajmniej jeden musi być spełniony.
+
+```python
 	true = True
 	false = False
-	```
+```
 	
-	***and***
-	```python
+***and***
+```python
 	true and true     # True
 	true and false    # False
 	false and true    # False
 	false and false   # False
-	```
+```
 	
-	***or***
-	```python
+***or***
+```python
 	true or true     # True
 	true or false    # True
 	false or true    # True
 	false or false   # False
-	```
+```
 	
-	Oprócz tego istnieje również spójnik *xor* czyli *exclusive or*. Oznacza on, że aby warunki połączone takim spójnikiem zwróciły *True* prawdziwy musi być dokładnie jeden z nich. Jako spójnik *xor* używamy znaku `^`:
+Oprócz tego istnieje również spójnik *xor* czyli *exclusive or*. Oznacza on, że aby warunki połączone takim spójnikiem zwróciły *True* prawdziwy musi być dokładnie jeden z nich. Jako spójnik *xor* używamy znaku `^`:
 	
-	```python
+```python
 	true ^ true     # False
 	true ^ false    # True
 	false ^ true    # True
 	false ^ false   # False
-	```
+```
 	
-	---
-	Możemy łączyć warunki logiczne w dłuższe łańcuchy. Wówczas należy pamiętać o kolejności obowiązywania spójników - pierwszeństwo ma *and* a za nim jest *or*. Oprócz tego obowiązują nawiasy, które mają pierwszeństwo również przed *and*. Poniżej kilka przykładów tego co zwrócą kombinacje warunków logicznych:
-	```python
+---
+Możemy łączyć warunki logiczne w dłuższe łańcuchy. Wówczas należy pamiętać o kolejności obowiązywania spójników — pierwszeństwo ma *and* a za nim jest *or*. Oprócz tego obowiązują nawiasy, które mają pierwszeństwo również przed *and*. Poniżej kilka przykładów tego co zwrócą kombinacje warunków logicznych:
+
+```python
 	True and True and False   # False
 	True or False or False    # True
 	True or True and False    # True
 	(True or True) and False  # False
 	False or True and False   # False
-	```
+```
 	
-	Kiedy chcemy połączyć warunki logiczne dotyczące relacji mniejszości lub większości możemy to zapisać korzystając z tzw. *syntactic sugar* czyli uproszczonej składni, która pozwala skrócić kod wykonujący daną czynność:
-	```python
+Kiedy chcemy połączyć warunki logiczne dotyczące relacji mniejszości lub większości, możemy to zapisać korzystając z tzw. *syntactic sugar*, czyli uproszczonej składni, która pozwala skrócić kod wykonujący daną czynność:
+
+```python
 	3 > 2 > 1      # True
 	3 > 10 > 1     # False
-	```
+```
 	
-	**Spójniki logiczne - podsumowanie:**
+**Spójniki logiczne - podsumowanie:**
 	- Aby sprawdzić czy oba warunki logiczne są naraz prawdziwe używamy spójnika *and*
 	- Aby sprawdzić czy przynajmniej jeden z warunków logicznych jest prawdziwy używamy spójnika *or*
 	- Aby sprawdzić czy dokładnie jeden z warunków logicznych jest prawdziwy używamy spójnika *xor* (^)
@@ -94,7 +102,7 @@ variable is not None    # False
 ---
 &nbsp;
 ### 4.3 Instrukcja if
-Bardzo często zdarza się, że pewien fragment kodu chcemy wykonać tylko wtedy jeśli spełniony zostanie określony warunek logiczny. W tym celu używamy instrukcji warunkowych. Instrukcja warunkowa zaczyna się od słowa kluczowego *if* po którym znajduje się warunek logiczny. Na końcu linii nalezy postawić dwukropek a kolejna linia (linie) kodu musi być wcięta - najczęściej z użyciem 4 spacji. Cały kod, który znajduje we wciętym bloku pod linijką zawierającą `if <warunek logiczny>:` wykona się tylko wtedy jeśli warunek logiczny zwróci wartość *True*. Poniżej kilka przykładów:
+Bardzo często zdarza się, że pewien fragment kodu chcemy wykonać tylko wtedy jeśli spełniony zostanie określony warunek logiczny. W tym celu używamy instrukcji warunkowych. Instrukcja warunkowa zaczyna się od słowa kluczowego *if*, po którym znajduje się warunek logiczny. Na końcu linii należy postawić dwukropek a kolejna linia (linie) kodu musi być wcięta - najczęściej z użyciem 4 spacji. Cały kod, który znajduje we wciętym bloku pod linijką zawierającą `if <warunek logiczny>:` wykona się tylko wtedy jeśli warunek logiczny zwróci wartość *True*. Poniżej kilka przykładów:
 
 ```python
 number_of_zombies = 0
@@ -133,7 +141,7 @@ if human_power > zombie_power:
 
 ---
 
-Warunkiem logicznym w instrukcji warunkowej może być nie tylko wyrażenie, które zwraca *True* lub *False*. To co znajduje się po słowie kluczowym `if` jest najpierw rzutowane na wartość logiczną funkcją `bool()`. W związku z tym jeśli zamiast typowego warunku logicznego użyjemy np. stringa, inta, listy itd. to instrukcja również zadziała. Wartości takie jak 0, pusty string czy pusta lista / tupla będą zachowywać się jak *False*.
+Warunkiem logicznym w instrukcji warunkowej może być nie tylko wyrażenie, które zwraca *True* lub *False*. To, co znajduje się po słowie kluczowym `if` jest najpierw rzutowane na wartość logiczną funkcją `bool()`. W związku z tym jeśli zamiast typowego warunku logicznego użyjemy np. stringa, inta, listy itd. to instrukcja również zadziała. Wartości takie jak 0, pusty string czy pusta lista / tupla będą zachowywać się jak *False*.
 
 ```python
 if not []:    # not [] --> not False --> True
