--- a/Python podstawowy/9. Programowanie obiektowe.md
+++ b/Python podstawowy/9. Programowanie obiektowe.md
@@ -60,7 +60,7 @@ class Human:
         self.n_killed = n_killed
 ```
 
-Zaczynamy od słowa kluczowego `class` po którym następuje nazwa klasy. Powinna ona być napisana z wielkiej litery - po tym poznajemy, że coś jest klasą. Następnie wcięty blok kodu zaczynamy od metody \_\_init__(), która będzie wykonana po utworzeniu obiektu. Jej lista parametrów zaczyna się od *self*, który jest odniesieniem do obiektu tej klasy. Co ważne, nie jest to żaden konkretny obiekt. *self* odnosi się zawsze do tego obiektu, który aktualnie jest tworzony w \_\_init__(). Pozostałe parametry działają jak w każdej innej funkcji.
+Zaczynamy od słowa kluczowego `class`, po którym następuje nazwa klasy. Powinna ona być napisana z wielkiej litery - po tym poznajemy, że coś jest klasą. Następnie wcięty blok kodu zaczynamy od metody \_\_init__(), która zostanie wykonana automatycznie po utworzeniu obiektu. Jej lista parametrów zaczyna się od *self*, który jest odniesieniem do obiektu tej klasy. Co ważne, nie jest to żaden konkretny obiekt. *self* odnosi się zawsze do tego obiektu, który aktualnie jest inicjowany w \_\_init__(). Pozostałe parametry działają jak w każdej innej funkcji.
 
 Wewnątrz metody \_\_init__() przypisujemy do poszczególnych atrybutów klasy `Human` wartości pochodzące z przekazanych argumentów. W podobny sposób utworzymy klasę `Zombie`:
 
@@ -151,22 +151,6 @@ class Human:
 
 Po utworzeniu instancji możemy się do tych metod odnieść:
 ```python
-class Human:
-    def __init__(self, x, y, velo, power, n_killed=0):
-        self.x = x
-        self.y = y
-        self.velocity = velo
-        self.power = power
-        self.n_killed = n_killed
-    
-    def shoot_zombie(self):
-        print("AAAAOOOUUAA!!! <gunshot>  ...")
-            
-    def shoot_n_zombies(self, n):
-        for z in range(n):
-            self.shoot_zombie()
-
-
 human = Human(1, 2, 3, 4)
 
 human.shoot_zombie()
@@ -225,7 +209,7 @@ print(zombie.y)
 &nbsp;
 ### 9.4 staticmethod, classmethod
 #### *staticmethod*
-Zazwyczaj wewnątrz metod odnosimy się do instancji klasy poprzez `self`. Może się jednak zdarzyć, że nie ma takiej potrzeby. Wówczas lepiej jest nie przekazywać do metody `self` - mamy w takim wypadku do czynienia z **metodą statyczną**. Trzeba to zawsze oznaczyć za pomocą dopisku `@staticmethod` nad sygnaturą funkcji:
+Zazwyczaj wewnątrz metod odnosimy się do instancji klasy poprzez `self`. Może się jednak zdarzyć, że nie wykorzystujemy do niczego tej instancji. Wówczas lepiej jest nie przekazywać do metody `self` - mamy w takim wypadku do czynienia z **metodą statyczną**. Trzeba to zawsze oznaczyć za pomocą dopisku `@staticmethod` nad sygnaturą funkcji:
 ```python
 class Human:
     def __init__(self, x, y, velo, power, n_killed=0):
@@ -309,9 +293,9 @@ print(human.n_killed)
 ---
 &nbsp;
 ### 9.5 Dziedziczenie
-Może się zdarzyć, że mamy do napisania kilka klas, które współdzielą część atrybutów albo metod. Wówczas nie ma konieczności pisać każdej klasy oddzielnie - możemy zebrać wszystkie wspólne funkcjonalności w jednej klasie bazowej, której potem uzyjemy jako punkt wyjścia do stworzenia kolejnych - pochodnych.
+Może się zdarzyć, że mamy do napisania kilka klas, które współdzielą część atrybutów albo metod. Wówczas nie ma konieczności pisać każdej klasy oddzielnie - możemy zebrać wszystkie wspólne funkcjonalności w jednej klasie bazowej, której potem uzyjemy jako punkt wyjścia do stworzenia kolejnych klas - pochodnych.
 
-Robimy to w następujacy sposób. Zacznijmy od stworzenia klasy `Vehicle`, która będzie reprezentować dowolny pojazd. Każdy pojazd ma jakis kolor, wagę oraz przebieg. Ma też możliwość przejechania jakiegoś dystansu, czyli zwiększenia przebiegu.
+Robimy to w następujacy sposób. Zacznijmy od stworzenia klasy `Vehicle`, która będzie reprezentować dowolny pojazd. Każdy pojazd ma jakiś kolor, wagę oraz przebieg. Ma też możliwość przejechania pewnego dystansu, czyli zwiększenia przebiegu.
 
 ```python
 class Vehicle:
@@ -324,7 +308,7 @@ class Vehicle:
         self.mileage += distance
 ```
 
-Teraz żeby zamodelowac bardziej konkretny pojazd, np. samochód należy stworzyć klasę dziedziczącą. Wewnątrz metody inicjalizacyjnej klasy pochodnej odwołujemy się do *inita* klasy bazowej:
+Teraz żeby zamodelować bardziej konkretny pojazd, np. samochód należy stworzyć klasę dziedziczącą. Wewnątrz metody inicjalizacyjnej klasy pochodnej odwołujemy się do *inita* klasy bazowej:
 
 ```python
 class Car(Vehicle):
